--- a/src/Larva.DynamicProxy/Larva.DynamicProxy.csproj
+++ b/src/Larva.DynamicProxy/Larva.DynamicProxy.csproj
@@ -1,22 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>netstandard1.6;netstandard2.0</TargetFrameworks>
     <ReleaseVersion>1.0.0</ReleaseVersion>
-    <PackOnBuild>true</PackOnBuild>
-    <Authors>Jerry Bai (QQ:407547953)</Authors>
-    <Copyright>freshncp</Copyright>
-    <NeutralLanguage>zh-Hans</NeutralLanguage>
-    <Owners>Jerry Bai (QQ:407547953)</Owners>
-    <PackageProjectUrl>https://github.com/freshncp/Larva.DynamicProxy</PackageProjectUrl>
-    <Summary>dotnet 动态代理类，用于AOP</Summary>
-    <PackageTags>dynamic proxy aop ioc</PackageTags>
-    <Title>Larva.DynamicProxy</Title>
-    <Description>dotnet 动态代理类，用于AOP</Description>
-    <PackageId>Larva.DynamicProxy</PackageId>
-    <PackageVersion>1.0.0</PackageVersion>
-    <PackageLicenseUrl>https://github.com/freshncp/Larva.DynamicProxy/blob/master/LICENSE</PackageLicenseUrl>
-    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -27,10 +13,6 @@
     <DebugType></DebugType>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="NuGet.Build.Packaging" Version="0.2.2">
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
     <PackageReference Include="System.Reflection.Emit" Version="4.3.0" />
   </ItemGroup>
 </Project>
