--- a/src/Larva.DynamicProxy/Larva.DynamicProxy.csproj
+++ b/src/Larva.DynamicProxy/Larva.DynamicProxy.csproj
@@ -1,14 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard1.6;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>net45;net46;net47;netstandard1.6;netstandard2.0</TargetFrameworks>
     <ReleaseVersion>1.0.0</ReleaseVersion>
   </PropertyGroup>
-
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <NoStdLib>true</NoStdLib>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+  <PropertyGroup Condition=" '$(TargetFramework)' == 'netstandard1.6' OR '$(TargetFramework)' == 'netstandard2.0' ">
     <NoStdLib>true</NoStdLib>
     <DebugType></DebugType>
   </PropertyGroup>
