--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -14,4 +14,4 @@ jobs:
       with:
         dotnet-version: 2.2.108
     - name: test
-      run: dotnet test src/DynamicProxyTests/ test
+      run: dotnet test src/DynamicProxyTests/
