--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -14,4 +14,6 @@ jobs:
       with:
         dotnet-version: 2.2.108
     - name: test
-      run: dotnet test src/DynamicProxyTests/
+      run: make test
+    - name: build
+      run: make rebuild
