--- a/src/Larva.DynamicProxy/Larva.DynamicProxy.csproj
+++ b/src/Larva.DynamicProxy/Larva.DynamicProxy.csproj
@@ -10,7 +10,7 @@
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <PackageId>Larva.DynamicProxy</PackageId>
     <Title>Larva.DynamicProxy</Title>
-    <Version>2.0.0-beta4</Version>
+    <Version>2.0.0</Version>
     <AssemblyVersion>2.0.0</AssemblyVersion>
     <PackageTags>dynamic-proxy proxy aop ioc interceptor interception</PackageTags>
     <Description>dotnet 动态代理类，用于AOP</Description>
